# iotics-host-lib

./: .gitignore  .pylint.rc  Dockerfile  Dockerfile.helper  Makefile  README.md  VERSION  build_all.sh  checker.sh  go.mod  go.sum  setup.cfg  setup.py  tox.ini  tutorial_ihl.py  tutorial_web_api.py  user_secrets.txt
builder/: MANIFEST.in  setup.cfg  setup.py
builder/iotics/follower_template/: cookiecutter.json
builder/iotics/follower_template/hooks/: post_gen_project.py  pre_gen_project.py
builder/iotics/follower_template/{{cookiecutter.follower_dir}}/: Dockerfile  Makefile  README.md  setup.cfg  setup.py  tox.ini
builder/iotics/follower_template/{{cookiecutter.follower_dir}}/tests/unit/{{cookiecutter.module_name}}/: conftest.py  test_conf.py
builder/iotics/follower_template/{{cookiecutter.follower_dir}}/{{cookiecutter.module_name}}/: conf.py  exceptions.py  follower.py
builder/iotics/publisher_template/: cookiecutter.json
builder/iotics/publisher_template/hooks/: post_gen_project.py  pre_gen_project.py
builder/iotics/publisher_template/{{cookiecutter.publisher_dir}}/: .pylint.rc  Dockerfile  Makefile  README.md  setup.cfg  setup.py
builder/iotics/publisher_template/{{cookiecutter.publisher_dir}}/tests/unit/{{cookiecutter.module_name}}/: conftest.py  test_conf.py
builder/iotics/publisher_template/{{cookiecutter.publisher_dir}}/{{cookiecutter.module_name}}/: conf.py  exceptions.py  publisher.py
call-api/: Dockerfile  Makefile  README.md  setup.cfg  tox.ini
call-api/callapi/: conf.py  exceptions.py  follower.py
call-api/tests/unit/callapi/: conftest.py  test_conf.py
faas/: .dockerignore  Dockerfile  Makefile  README.md  setup.cfg  setup.py  tox.ini
faas/faas/: conf.py  exceptions.py  follower.py
faas/tests/unit/faas/: conftest.py  test_conf.py
magebuild/: mage.go  magefile.go  python.go
met-loc-1/: Dockerfile  Makefile  README.md  setup.cfg  tox.ini
met-loc-1/metloc1/: conf.py  exceptions.py  publisher.py
met-loc-1/tests/unit/metloc1/: conftest.py  test_conf.py
pollen-train-synth/: Dockerfile  Makefile  README.md  setup.cfg  tox.ini
pollen-train-synth/pollentrainsynth/: conf.py  exceptions.py  follower.py
pollen-train-synth/tests/unit/pollentrainsynth/: conftest.py  test_conf.py
random-temp-fol-db/: .gitignore  Dockerfile  Makefile  README.md  sensor_readings.db  setup.cfg  tox.ini
random-temp-fol-db/randfol/: conf.py  exceptions.py  follower.py
random-temp-fol-db/randfol/dbengine/: csv.py  sqlite.py
random-temp-fol-db/tests/unit/randfol/: conftest.py  test_conf.py
random-temp-pub-db/: Dockerfile  Makefile  README.md  setup.cfg  tox.ini
random-temp-pub-db/randpub/: conf.py  exceptions.py  publisher.py
random-temp-pub-db/tests/unit/randpub/: conftest.py  test_conf.py
scripts/: gen_creds.py  make_auth.py  make_twin.py
scripts/tmpdel/: README.md  delete_agents_twins.py  requirements.txt
src/: MANIFEST.in  README.md  get_debug_auth.py  setup.cfg  setup.py  test_create_and_search.py
src/iotics/host/: auth.py  constants.py  exceptions.py  metrics.py
src/iotics/host/api/: __init__.py  data_types.py  feed_api.py  follow_api.py  interest_api.py  qapi.py  search_api.py  twin_api.py  utils.py
src/iotics/host/conf/: __init__.py  base.py  helper.py
src/tests/: __init__.py  conftest.py
src/tests/iotics/data/: conftest.py  mocks.py  test_auth.py  test_feed_api.py  test_follow_api.py  test_interest_api.py  test_interest_api_local.py  test_interest_api_remote.py  test_search_api.py  test_twin_api.py  test_utils.py
src/tests/iotics/data/conf/: helper_test.py  test_conf.py  test_conf_helper.py
testing/: MANIFEST.in  setup.cfg  setup.py
testing/iotics/host/testing/: auth_helper.py  fake.py  qapi.py
weather-template/: Dockerfile  Makefile  README.md  setup.cfg  tox.ini
weather-template/tests/unit/weathertemplate/: conftest.py  test_conf.py
weather-template/weathertemplate/: conf.py  exceptions.py  follower.py  metforecast_template.json
