[tool:pytest]
testpaths = tests
addopts =
    -p no:warnings

[flake8]
exclude =
    env
    venv
    .tox
ignore =
# line break before binary operator (keeping W504: line break after binary operator)
    W503
max-line-length = 120
max-complexity = 15

[metadata]
name = iotics.host.lib.builder
description = Iotics Host Common Builder
long_description = file: README.md
long_description_content_type = text/markdown
author = Iotic Labs
author_email = info@iotics.com
url = https://github.com/Iotic-Labs/iotics-host-lib
python_requires = >=3.8

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    cookiecutter==1.7.2
