[tool:pytest]
testpaths = tests
addopts =
    -p no:warnings

[flake8]
exclude =
    env
    venv
    .tox
ignore =
# line break before binary operator (keeping W504: line break after binary operator)
    W503
max-line-length = 120
max-complexity = 15

[metadata]
name = iotics.host.lib.sources
description = Iotics Host Common sources
long_description = file: README.md
long_description_content_type = text/markdown
author = Iotic Labs
author_email = info@iotics.com
url = https://github.com/Iotic-Labs/iotic-web
python_requires = >=3.8

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    iotics-identity>=1.0.2,<2.0
    iotic.web.rest.client~=2.0.119
    iotic.web.stomp~=1.0.5
    prometheus-client~=0.10.1
    pydantic>=1.6.1
    PyYAML>=5.3.1
    shortuuid>=1.0.1

[options.extras_require]
dev =
    tox

test =
    pytest
    pytest-cov
    pytest-mock
    pytest-html
    requests_mock
    retry>=0.9.2
    iotics.host.lib.testability

lint =
    flake8
    pylint
    pylint_quotes

[options.packages.find]
exclude =
    test*
