# Copyright 2022 Iotic Labs Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://github.com/Iotic-Labs/iotics-host-lib/blob/master/LICENSE
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[tool:pytest]
testpaths = tests
addopts =
    -p no:warnings

[flake8]
exclude =
    env
    venv
    .tox
ignore =
# line break before binary operator (keeping W504: line break after binary operator)
    W503
max-line-length = 120
max-complexity = 15

[metadata]
name = iotics.host.lib.sources
description = Iotics Host Common sources
long_description = file: README.md
long_description_content_type = text/markdown
author = Iotic Labs
author_email = info@iotics.com
url = https://github.com/Iotic-Labs/iotic-web
python_requires = >=3.8
license = Apache License 2.0
license_files =
   LICENSE

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    iotics-identity>=1.0.2,<2.0
    iotic.web.rest.client~=2.0.130
    iotic.web.stomp~=1.0.5
    prometheus-client~=0.10.1
    pydantic>=1.6.1
    PyYAML>=5.3.1
    shortuuid>=1.0.1

[options.extras_require]
dev =
    tox

test =
    pytest
    pytest-cov
    pytest-mock
    pytest-html
    requests_mock
    retry>=0.9.2
    iotics.host.lib.testability

lint =
    flake8
    pylint
    pylint_quotes

[options.packages.find]
exclude =
    test*
