[tool:pytest]
testpaths = tests
addopts =
    -p no:warnings

[flake8]
exclude =
    env
    venv
    .tox
ignore =
# line break before binary operator (keeping W504: line break after binary operator)
    W503
max-line-length = 120
max-complexity = 15

[metadata]
name = iotics.host.lib.testability
description = Iotics Host Common test helpers
long_description = file: README.md
long_description_content_type = text/markdown
author = Iotic Labs
author_email = info@iotics.com
url = https://github.com/Iotic-Labs/iotic-web
python_requires = >=3.8

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    pytest
    pytest-cov
    pytest-mock
    pytest-html
    requests_mock
    retry>=0.9.2

[options.extras_require]
lint =
    flake8
    pylint==2.6.2
    pylint_quotes

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    iotics-test-auth-helper=iotics.host.testing.auth_helper:setup_test_identity
