# Copyright 2022 Iotic Labs Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://github.com/Iotic-Labs/iotics-host-lib/blob/master/LICENSE
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[tool:pytest]
testpaths = tests
addopts =
    -p no:warnings

[flake8]
exclude =
    env
    venv
    .tox
ignore =
# line break before binary operator (keeping W504: line break after binary operator)
    W503
max-line-length = 120
max-complexity = 15

[metadata]
name = iotics.host.lib.testability
description = Iotics Host Common test helpers
long_description = file: README.md
long_description_content_type = text/markdown
author = Iotic Labs
author_email = info@iotics.com
url = https://github.com/Iotic-Labs/iotic-web
python_requires = >=3.8

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    pytest
    pytest-cov
    pytest-mock
    pytest-html
    requests_mock
    retry>=0.9.2

[options.extras_require]
lint =
    flake8
    pylint==2.6.2
    pylint_quotes

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    iotics-test-auth-helper=iotics.host.testing.auth_helper:setup_test_identity
