[tool:pytest]
testpaths = tests
addopts =
    -p no:warnings

[flake8]
exclude =
    env
    venv
    .tox
ignore =
# line break before binary operator (keeping W504: line break after binary operator)
    W503
max-line-length = 120

[metadata]
name = {{cookiecutter.module_name}}
description = {{cookiecutter.project_name}}
long_description = file: README.md
long_description_content_type = text/markdown
author = Iotic Labs
author_email = info@iotics.com
url = https://github.com/Iotic-Labs/iotics-host-lib
python_requires = >=3.8

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    iotics.host.lib.sources~=8.0

[options.extras_require]
dev =
    tox

test =
    pytest
    pytest-cov
    pytest-mock
    pytest-html

lint =
    flake8
    pylint
    pylint_quotes

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    {{cookiecutter.command_name}}={{cookiecutter.module_name}}.publisher:run_publisher

[bdist_wheel]
universal = 1
